# aicl-protocol

./: .gitignore  ABNF.md  FINAL_VERSION.md  LICENSE  README.md  SPEC.md  playground.html  pyproject.toml
.github/workflows/: pypi.yml
aicl/: __init__.py  cli.py  parser.py  validator.py
examples/: 01_ask.aicl  02_negotiate_hitl.aicl  03_delegate.aicl
tests/: test_aicl_tools.py
tools/: aicl_cli.py  parse_aicl.py  transpile_nl_to_aicl.py  validate_aicl.py
