[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicl"
version = "1.0.0"
description = "Agent Intent Communication Language - A structured communication protocol for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AICL Team", email = "haocn@ops.io"}
]
keywords = ["ai", "agents", "communication", "protocol", "aicl", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
aicl = "aicl.cli:main"

[project.urls]
Homepage = "https://github.com/haocn-ops/aicl-protocol"
Documentation = "https://github.com/haocn-ops/aicl-protocol/blob/main/SPEC.md"
Repository = "https://github.com/haocn-ops/aicl-protocol"
Issues = "https://github.com/haocn-ops/aicl-protocol/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicl*"]

[tool.setuptools.package-data]
aicl = ["py.typed"]
